--- a/project_listings/baby-shower/gallery/its-a-boy-gallery.html
+++ b/project_listings/baby-shower/gallery/its-a-boy-gallery.html
@@ -53,7 +53,7 @@
           </nav>
 
           <nav class="navigation">
-            <a href="../../merged-listings.html" class="button"
+            <a href="../../index.html" class="button"
               >← Back to Home</a
             >
           </nav>
