--- a/project_listings/invite-wedding/gallery/summer-wedding-gallery.html
+++ b/project_listings/invite-wedding/gallery/summer-wedding-gallery.html
@@ -53,7 +53,7 @@
   </nav>
 
   <nav class="navigation">
-    <a href="../../merged-listings.html" class="button">← Back to Home</a>
+    <a href="../../index.html" class="button">← Back to Home</a>
   </nav>
 
   <button class="buy-now">Buy Now</button>
