--- a/project_listings/invite-wedding/gallery/warm-gathering-gallery.html
+++ b/project_listings/invite-wedding/gallery/warm-gathering-gallery.html
@@ -89,7 +89,7 @@
                       </nav>
 
                       <nav class="navigation">
-                        <a href="../../merged-listings.html" class="button"
+                        <a href="../../index.html" class="button"
                           >← Back to Home</a
                         >
                       </nav>
