--- a/project_listings/subpages/custom-website.html
+++ b/project_listings/subpages/custom-website.html
@@ -68,5 +68,5 @@
   </p>
 </div>
 
-<a href="../merged-listings.html" class="button">Back to Home</a>
+<a href="../index.html" class="button">Back to Home</a>
 <button class="buy-now">Buy Now</button>
