--- a/project_listings/subpages/its-a-boy.html
+++ b/project_listings/subpages/its-a-boy.html
@@ -64,7 +64,7 @@
               </ul>
             </nav>
 
-            <a href="../merged-listings.html" class="button">Back to Home</a>
+            <a href="../index.html" class="button">Back to Home</a>
             <button class="buy-now">Buy Now</button>
           </ul>
         </ul>
