--- a/project_listings/subpages/static-page.html
+++ b/project_listings/subpages/static-page.html
@@ -33,6 +33,6 @@
     <p>Great for quick, professional online presence.</p>
   </div>
 
-  <a href="../merged-listings.html" class="button">Back to Home</a>
+  <a href="../index.html" class="button">Back to Home</a>
   <button class="buy-now">Buy Now</button>
 </div>
