--- a/project_listings/subpages/warm-gathering.html
+++ b/project_listings/subpages/warm-gathering.html
@@ -93,7 +93,7 @@
                         </ul>
                       </nav>
 
-                      <a href="../merged-listings.html" class="button"
+                      <a href="../index.html" class="button"
                         >Back to Home</a
                       >
                       <button class="buy-now">Buy Now</button>
