--- a/baby-shower/gallery/its-a-boy-gallery.html
+++ b/baby-shower/gallery/its-a-boy-gallery.html
@@ -6,10 +6,10 @@
   />
 
   <!-- Light Theme CSS -->
-  <link rel="stylesheet" href="../../style-light.css" />
+  <link rel="stylesheet" href="../style-light.css" />
 
   <!-- Dark Theme CSS (optional: use only one if you don't toggle) -->
-  <link rel="stylesheet" href="../../style-dark.css" />
+  <link rel="stylesheet" href="../style-dark.css" />
 </head>
 <div class="product">
   <h2 class="title">
@@ -17,7 +17,7 @@
     | Multiple Page Options
   </h2>
   <img
-    src="../../assets/its-a-boy-1.jpg"
+    src="../assets/its-a-boy-1.jpg"
     alt="Gallery Baby Shower Website Template – It's a Boy Theme | Editable RSVP Page | Multiple Page Options"
   />
   <p class="price">$9.99</p>
@@ -53,7 +53,7 @@
           </nav>
 
           <nav class="navigation">
-            <a href="../../merged-listings.html" class="button"
+            <a href="../../index.html" class="button"
               >← Back to Home</a
             >
           </nav>
