--- a/baby-shower/gallery/its-a-boy-gallery.html
+++ b/baby-shower/gallery/its-a-boy-gallery.html
@@ -6,10 +6,10 @@
   />
 
   <!-- Light Theme CSS -->
-  <link rel="stylesheet" href="../style-light.css" />
+  <link rel="stylesheet" href="../../style-light.css" />
 
   <!-- Dark Theme CSS (optional: use only one if you don't toggle) -->
-  <link rel="stylesheet" href="../style-dark.css" />
+  <link rel="stylesheet" href="../../style-dark.css" />
 </head>
 <div class="product">
   <h2 class="title">
