--- a/baby-shower/gallery/its-a-boy-gallery.html
+++ b/baby-shower/gallery/its-a-boy-gallery.html
@@ -17,7 +17,7 @@
     | Multiple Page Options
   </h2>
   <img
-    src="../assets/its-a-boy-1.jpg"
+    src="../../assets/its-a-boy-1.jpg"
     alt="Gallery Baby Shower Website Template – It's a Boy Theme | Editable RSVP Page | Multiple Page Options"
   />
   <p class="price">$9.99</p>
