--- a/subpages/starter-website.html
+++ b/subpages/starter-website.html
@@ -33,6 +33,6 @@
     <p>Ideal for freelancers, small businesses, or personal projects.</p>
   </div>
 
-  <a href="../merged-listings.html" class="button">Back to Home</a>
+  <a href="../index.html" class="button">Back to Home</a>
   <button class="buy-now">Buy Now</button>
 </div>
