--- a/subpages/summer-wedding.html
+++ b/subpages/summer-wedding.html
@@ -71,6 +71,6 @@
     </ul>
   </nav>
 
-  <a href="../merged-listings.html" class="button">Back to Home</a>
+  <a href="../index.html" class="button">Back to Home</a>
   <button class="buy-now">Buy Now</button>
 </div>
