--- a/subpages/boho-save-the-date.html
+++ b/subpages/boho-save-the-date.html
@@ -100,6 +100,6 @@
     </ul>
   </nav>
 
-  <a href="../index.html" class="button">Back to Home</a>
+  <a href="/index.html" class="button">Back to Home</a>
   <button class="buy-now">Buy Now</button>
 </div>
