--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
       });
     </script>
     <footer class="site-footer fade-in">
-  <img src="../assets/daydream-logo.png" alt="Daydream Studios logo" class="footer-logo" />
+  <img src="assets/daydream-logo.png" alt="Daydream Studios logo" class="footer-logo" />
   <p>© 2025 Daydream Studios · All rights reserved.</p>
 </footer>
   </body>
