--- a/invite-wedding/gallery/summer-wedding-gallery.html
+++ b/invite-wedding/gallery/summer-wedding-gallery.html
@@ -2,11 +2,8 @@
  <!-- Google Fonts: Inter -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 
-  <!-- Light Theme CSS -->
-  <link rel="stylesheet" href="../../style-light.css" />
+ <link id="theme-style" rel="stylesheet" href="../../style-light.css" />
 
-  <!-- Dark Theme CSS (optional: use only one if you don't toggle) -->
-  <link rel="stylesheet" href="../../style-dark.css" />
 
 </head>
 <div class="product">
