--- a/subpages/boho-save-the-date.html
+++ b/subpages/boho-save-the-date.html
@@ -4,12 +4,9 @@
     href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
     rel="stylesheet"
   />
+  
+<link id="theme-style" rel="stylesheet" href="../../style-light.css" />
 
-  <!-- Light Theme CSS -->
-  <link rel="stylesheet" href="../style-light.css" />
-
-  <!-- Dark Theme CSS (optional: use only one if you don't toggle) -->
-  <link rel="stylesheet" href="../style-dark.css" />
 </head>
 <div class="product">
   <h2 class="title">
