--- a/subpages/starter-website.html
+++ b/subpages/starter-website.html
@@ -5,11 +5,8 @@
     rel="stylesheet"
   />
 
-  <!-- Light Theme CSS -->
-  <link rel="stylesheet" href="../style-light.css" />
+<link id="theme-style" rel="stylesheet" href="../../style-light.css" />
 
-  <!-- Dark Theme CSS (optional: use only one if you don't toggle) -->
-  <link rel="stylesheet" href="../style-dark.css" />
 </head>
 <div class="product">
   <h2 class="title">Starter Website — Get Your Site Up and Running Fast</h2>
