--- a/baby-shower/lite/its-a-girl-lite.html
+++ b/baby-shower/lite/its-a-girl-lite.html
@@ -62,3 +62,38 @@
     </ul>
   </div>
 </div>
+      </nav>
+    </div>
+  </div>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const themeLink = document.getElementById("theme-style");
+      const toggleBtn = document.getElementById("dark-mode-toggle");
+
+      const savedTheme = localStorage.getItem("theme");
+      if (savedTheme && themeLink) {
+        themeLink.href = savedTheme === "dark"
+          ? "../../style-dark.css"
+          : "../../style-light.css";
+        if (toggleBtn) {
+          toggleBtn.textContent = savedTheme === "dark"
+            ? "☀️ Light Mode"
+            : "🌙 Dark Mode";
+        }
+      }
+
+      if (toggleBtn && themeLink) {
+        toggleBtn.addEventListener("click", () => {
+          const isLight = themeLink.href.includes("style-light.css");
+          themeLink.href = isLight
+            ? "../../style-dark.css"
+            : "../../style-light.css";
+          toggleBtn.textContent = isLight
+            ? "☀️ Light Mode"
+            : "🌙 Dark Mode";
+          localStorage.setItem("theme", isLight ? "dark" : "light");
+        });
+      }
+    });
+  </script>
