--- a/index.html
+++ b/index.html
@@ -43,12 +43,6 @@
     />
     <meta content="Fully editable before final delivery" name="editable" />
    
-    <!-- Default to light mode -->
-    <link href="style-light.css" id="theme-style" rel="stylesheet" />
-    <!-- Other head stuff -->
-    <button aria-label="Toggle dark mode" id="dark-mode-toggle">
-      🌙 Dark Mode
-    </button>
   </head>
   <body>
     <h1 style="text-align: center; margin-bottom: 30px">
@@ -205,6 +199,19 @@
         >
       </div>
     </section>
+  
+  <h1 style="text-align: center; margin-bottom: 30px">
+    Custom Event Website Templates
+  </h1>
+
+  <button aria-label="Toggle dark mode" id="dark-mode-toggle" style="margin-bottom: 20px;">
+    🌙 Dark Mode
+  </button>
+
+  <section class="product-category" id="wedding-invite-products">
+    <!-- your product cubes here -->
+  </section>
+
    <script>
   document.addEventListener("DOMContentLoaded", () => {
     // Toggle 'active' class on product cube click
@@ -242,9 +249,11 @@
   });
 </script>
 
-<footer class="site-footer fade-in">
-  <img src="assets/daydream-logo.png" alt="Daydream Studios logo" class="footer-logo" />
-  <p>© 2025 Daydream Studios · All rights reserved.</p>
-</footer>
+
+  <footer class="site-footer fade-in">
+    <img src="assets/daydream-logo.png" alt="Daydream Studios logo" class="footer-logo" />
+    <p>© 2025 Daydream Studios · All rights reserved.</p>
+  </footer>
+
   </body>
 </html>
