--- a/index.html
+++ b/index.html
@@ -214,6 +214,8 @@
 
    <script>
 
+  <script>
+  document.addEventListener("DOMContentLoaded", () => {
     // Theme toggle logic
     const toggleBtn = document.getElementById("dark-mode-toggle");
     const themeLink = document.getElementById("theme-style");
@@ -241,7 +243,6 @@
     }
   });
 </script>
-
 
   <footer class="site-footer fade-in">
     <img src="assets/daydream-logo.png" alt="Daydream Studios logo" class="footer-logo" />
