--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       Custom Event Website Templates
     </h1>
     <section class="product-category" id="wedding-invite-products">
-      <div class="product-cube">
+      <div class="product-card">
         <img
           alt="Full Editable Save the Date Template – Boho Sunset Canva Download | Wedding Invitation | All-Inclusive Design"
           class="product-image"
@@ -66,7 +66,7 @@
           >View Details</a
         >
       </div>
-      <div class="product-cube">
+      <div class="product-card">
         <img
           alt="Custom business or Event Website – Save the Date, RSVP Page – Personalized Digital Invite + Free Hosting"
           class="product-image"
@@ -83,7 +83,7 @@
           >View Details</a
         >
       </div>
-      <div class="product-cube">
+      <div class="product-card">
         <img
           alt="Full Baby Shower Website Template – It's a Boy Theme | Editable RSVP Page | Complete Customizable Design"
           class="product-image"
@@ -100,7 +100,7 @@
           >View Details</a
         >
       </div>
-      <div class="product-cube">
+      <div class="product-card">
         <img
           alt="Full Baby Shower Website Template – It's a Girl Theme | Editable RSVP Page | Complete Customizable Design"
           class="product-image"
@@ -117,7 +117,7 @@
           >View Details</a
         >
       </div>
-      <div class="product-cube">
+      <div class="product-card">
         <img
           alt="Insta Link Bio Page — Your Links, All in One Spot"
           class="product-image"
@@ -133,7 +133,7 @@
           >View Details</a
         >
       </div>
-      <div class="product-cube">
+      <div class="product-card">
         <img
           alt="Starter Website — Get Your Site Up and Running Fast"
           class="product-image"
@@ -149,7 +149,7 @@
           >View Details</a
         >
       </div>
-      <div class="product-cube">
+      <div class="product-card">
         <img
           alt="Static Page — Simple One-Page Website That Works"
           class="product-image"
@@ -165,7 +165,7 @@
           >View Details</a
         >
       </div>
-      <div class="product-cube">
+      <div class="product-card">
         <img
           alt="Full Summer Wedding Website Template – Save the Date Digital Page | Editable RSVP | Complete Customization"
           class="product-image"
@@ -182,7 +182,7 @@
           >View Details</a
         >
       </div>
-      <div class="product-cube">
+      <div class="product-card">
         <img
           alt="Full Family Website – Warm Gathering Theme | Editable RSVP Page"
           class="product-image"
