--- a/index.html
+++ b/index.html
@@ -1,253 +1,156 @@
 <!DOCTYPE html>
-
 <html lang="en">
-  <head>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans&display=swap" rel="stylesheet" />
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Beautiful custom website templates for weddings, baby showers, Save the Dates, and RSVP pages. Easy, fast, and personalized for your event." />
+  <meta name="keywords" content="wedding website template, baby shower invite, digital RSVP, save the date website, custom event website, personalized html template" />
+  <meta name="author" content="Daydream studios" />
+  <meta name="template-type" content="Event Website Template" />
+  <meta name="event-types" content="Baby Shower, Wedding, Save the Date, RSVP" />
+  <meta name="product-category" content="Digital Templates" />
+  <meta name="customizable" content="Yes" />
+  <meta name="hosting" content="GitHub Pages" />
+  <meta name="delivery" content="Instant Digital Download" />
+  <meta name="tech-skills-required" content="None" />
+  <meta name="branding" content="Personalized Design" />
+  <meta name="turnaround-time" content="1-2 business days" />
+  <meta name="support" content="Free setup assistance included" />
+  <meta name="format" content="HTML, CSS, JS" />
+  <meta name="colors" content="Custom color themes available" />
+  <meta name="photos" content="Photo upload option" />
+  <meta name="responsive" content="Mobile and desktop friendly" />
+  <meta name="best-use" content="Celebrations, Announcements, Events" />
+  <meta name="tags" content="baby shower, save the date, wedding website, rsvp template, digital invite" />
+  <meta name="target-audience" content="Couples, Parents-to-be, Small Businesses" />
+  <meta name="editable" content="Fully editable before final delivery" />
 
-    <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta
-      content="Beautiful custom website templates for weddings, baby showers, Save the Dates, and RSVP pages. Easy, fast, and personalized for your event."
-      name="description"
-    />
-    <meta
-      content="wedding website template, baby shower invite, digital RSVP, save the date website, custom event website, personalized html template"
-      name="keywords"
-    />
-    <meta content="Daydream studios" name="author" />
-    <meta content="Event Website Template" name="template-type" />
-    <meta
-      content="Baby Shower, Wedding, Save the Date, RSVP"
-      name="event-types"
-    />
-    <meta content="Digital Templates" name="product-category" />
-    <meta content="Yes" name="customizable" />
-    <meta content="GitHub Pages" name="hosting" />
-    <meta content="Instant Digital Download" name="delivery" />
-    <meta content="None" name="tech-skills-required" />
-    <meta content="Personalized Design" name="branding" />
-    <meta content="1-2 business days" name="turnaround-time" />
-    <meta content="Free setup assistance included" name="support" />
-    <meta content="HTML, CSS, JS" name="format" />
-    <meta content="Custom color themes available" name="colors" />
-    <meta content="Photo upload option" name="photos" />
-    <meta content="Mobile and desktop friendly" name="responsive" />
-    <meta content="Celebrations, Announcements, Events" name="best-use" />
-    <meta
-      content="baby shower, save the date, wedding website, rsvp template, digital invite"
-      name="tags"
-    />
-    <meta
-      content="Couples, Parents-to-be, Small Businesses"
-      name="target-audience"
-    />
-    <meta content="Fully editable before final delivery" name="editable" />
-   
-  </head>
-  <body>
-    <h1 style="text-align: center; margin-bottom: 30px">
-      Custom Event Website Templates
-    </h1>
-    <section class="product-category" id="wedding-invite-products">
-      <div class="product-card">
-        <img
-          alt="Full Editable Save the Date Template – Boho Sunset Canva Download | Wedding Invitation | All-Inclusive Design"
-          class="product-image"
-          src="assets/save-the-date-3.jpg"
-        />
-        <div class="product-header">
-          <h2 class="product-title">
-            Full Editable Save the Date Template – Boho Sunset Canva Download |
-            Wedding Invitation | All-Inclusive Design
-          </h2>
-          <div class="product-price">$11.99</div>
-        </div>
-        <a class="view-details-button" href="subpages/boho-save-the-date.html"
-          >View Details</a
-        >
-      </div>
-      <div class="product-card">
-        <img
-          alt="Custom business or Event Website – Save the Date, RSVP Page – Personalized Digital Invite + Free Hosting"
-          class="product-image"
-          src="assets/product-1.jpg"
-        />
-        <div class="product-header">
-          <h2 class="product-title">
-            Custom business or Event Website – Save the Date, RSVP Page –
-            Personalized Digital Invite + Free Hosting
-          </h2>
-          <div class="product-price">$24.99</div>
-        </div>
-        <a class="view-details-button" href="subpages/custom-website.html"
-          >View Details</a
-        >
-      </div>
-      <div class="product-card">
-        <img
-          alt="Full Baby Shower Website Template – It's a Boy Theme | Editable RSVP Page | Complete Customizable Design"
-          class="product-image"
-          src="assets/its-a-boy-2.jpg"
-        />
-        <div class="product-header">
-          <h2 class="product-title">
-            Full Baby Shower Website Template – It's a Boy Theme | Editable RSVP
-            Page | Complete Customizable Design
-          </h2>
-          <div class="product-price">$11.99</div>
-        </div>
-        <a class="view-details-button" href="subpages/its-a-boy.html"
-          >View Details</a
-        >
-      </div>
-      <div class="product-card">
-        <img
-          alt="Full Baby Shower Website Template – It's a Girl Theme | Editable RSVP Page | Complete Customizable Design"
-          class="product-image"
-          src="assets/its-a-girl-2.jpg"
-        />
-        <div class="product-header">
-          <h2 class="product-title">
-            Full Baby Shower Website Template – It's a Girl Theme | Editable
-            RSVP Page | Complete Customizable Design
-          </h2>
-          <div class="product-price">$11.99</div>
-        </div>
-        <a class="view-details-button" href="subpages/its-a-girl.html"
-          >View Details</a
-        >
-      </div>
-      <div class="product-card">
-        <img
-          alt="Insta Link Bio Page — Your Links, All in One Spot"
-          class="product-image"
-          src="assets/link-in-bio.jpg"
-        />
-        <div class="product-header">
-          <h2 class="product-title">
-            Insta Link Bio Page — Your Links, All in One Spot
-          </h2>
-          <div class="product-price">$20.00</div>
-        </div>
-        <a class="view-details-button" href="subpages/link-in-bio.html"
-          >View Details</a
-        >
-      </div>
-      <div class="product-card">
-        <img
-          alt="Starter Website — Get Your Site Up and Running Fast"
-          class="product-image"
-          src="assets/link-in-bio-1.jpg"
-        />
-        <div class="product-header">
-          <h2 class="product-title">
-            Starter Website — Get Your Site Up and Running Fast
-          </h2>
-          <div class="product-price">$20.00</div>
-        </div>
-        <a class="view-details-button" href="subpages/starter-website.html"
-          >View Details</a
-        >
-      </div>
-      <div class="product-card">
-        <img
-          alt="Static Page — Simple One-Page Website That Works"
-          class="product-image"
-          src="assets/link-in-bio-2.jpg"
-        />
-        <div class="product-header">
-          <h2 class="product-title">
-            Static Page — Simple One-Page Website That Works
-          </h2>
-          <div class="product-price">$20.00</div>
-        </div>
-        <a class="view-details-button" href="subpages/static-page.html"
-          >View Details</a
-        >
-      </div>
-      <div class="product-card">
-        <img
-          alt="Full Summer Wedding Website Template – Save the Date Digital Page | Editable RSVP | Complete Customization"
-          class="product-image"
-          src="assets/summer_love.jpg"
-        />
-        <div class="product-header">
-          <h2 class="product-title">
-            Full Summer Wedding Website Template – Save the Date Digital Page |
-            Editable RSVP | Complete Customization
-          </h2>
-          <div class="product-price">$11.99</div>
-        </div>
-        <a class="view-details-button" href="subpages/summer-wedding.html"
-          >View Details</a
-        >
-      </div>
-      <div class="product-card">
-        <img
-          alt="Full Family Website – Warm Gathering Theme | Editable RSVP Page"
-          class="product-image"
-          src="assets/warm_gathering.jpg"
-        />
-        <div class="product-header">
-          <h2 class="product-title">
-            Full Family Website – Warm Gathering Theme | Editable RSVP Page
-          </h2>
-          <div class="product-price">$11.99</div>
-        </div>
-        <a class="view-details-button" href="subpages/warm-gathering.html"
-          >View Details</a
-        >
-      </div>
-    </section>
-  
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans&display=swap" rel="stylesheet" />
+  <link id="theme-style" rel="stylesheet" href="style-light.css" />
+
+  <title>Custom Event Website Templates</title>
+</head>
+<body>
+
   <h1 style="text-align: center; margin-bottom: 30px">
     Custom Event Website Templates
   </h1>
 
-  <button aria-label="Toggle dark mode" id="dark-mode-toggle" style="margin-bottom: 20px;">
+  <button id="dark-mode-toggle" aria-label="Toggle dark mode" style="margin: 0 auto 30px; display: block;">
     🌙 Dark Mode
   </button>
 
   <section class="product-category" id="wedding-invite-products">
-    <!-- your product cubes here -->
+
+<div class="product-card">
+  <img class="product-image" src="assets/product-1.jpg" alt="Custom Business or Event Website" />
+  <div class="product-header">
+    <h2 class="product-title">Custom Business or Event Website</h2>
+    <div class="product-price">$24.99</div>
+  </div>
+  <a class="view-details-button" href="subpages/custom-website.html">View Details</a>
+</div>
+
+<div class="product-card">
+  <img class="product-image" src="assets/link-in-bio.jpg" alt="Insta Link in Bio Page" />
+  <div class="product-header">
+    <h2 class="product-title">Insta Link in Bio Page</h2>
+    <div class="product-price">$20.00</div>
+  </div>
+  <a class="view-details-button" href="subpages/link-in-bio.html">View Details</a>
+</div>
+
+<div class="product-card">
+  <img class="product-image" src="assets/link-in-bio-1.jpg" alt="Starter Website Template" />
+  <div class="product-header">
+    <h2 class="product-title">Starter Website Template</h2>
+    <div class="product-price">$20.00</div>
+  </div>
+  <a class="view-details-button" href="subpages/starter-website.html">View Details</a>
+</div>
+
+<div class="product-card">
+  <img class="product-image" src="assets/link-in-bio-2.jpg" alt="Static Page Template" />
+  <div class="product-header">
+    <h2 class="product-title">Static Page Template</h2>
+    <div class="product-price">$20.00</div>
+  </div>
+  <a class="view-details-button" href="subpages/static-page.html">View Details</a>
+</div>
+  
+  <div class="product-card">
+  <img class="product-image" src="assets/save-the-date-3.jpg" alt="Boho Sunset Save the Date Template" />
+  <div class="product-header">
+    <h2 class="product-title">Boho Sunset Save the Date Template</h2>
+    <div class="product-price">$11.99</div>
+  </div>
+  <a class="view-details-button" href="subpages/boho-save-the-date.html">View Details</a>
+</div>  
+
+<div class="product-card">
+  <img class="product-image" src="assets/summer_love.jpg" alt="Summer Wedding Template" />
+  <div class="product-header">
+    <h2 class="product-title">Summer Wedding Template</h2>
+    <div class="product-price">$11.99</div>
+  </div>
+  <a class="view-details-button" href="subpages/summer-wedding.html">View Details</a>
+</div>
+
+<div class="product-card">
+  <img class="product-image" src="assets/warm_gathering.jpg" alt="Warm Gathering Family Website" />
+  <div class="product-header">
+    <h2 class="product-title">Warm Gathering Family Website</h2>
+    <div class="product-price">$11.99</div>
+  </div>
+  <a class="view-details-button" href="subpages/warm-gathering.html">View Details</a>
+</div>
+ 
+<div class="product-card">
+  <img class="product-image" src="assets/its-a-boy-2.jpg" alt="It's a Boy Baby Shower Template" />
+  <div class="product-header">
+    <h2 class="product-title">It's a Boy Baby Shower Template</h2>
+    <div class="product-price">$11.99</div>
+  </div>
+  <a class="view-details-button" href="subpages/its-a-boy.html">View Details</a>
+</div>
+
+<div class="product-card">
+  <img class="product-image" src="assets/its-a-girl-2.jpg" alt="It's a Girl Baby Shower Template" />
+  <div class="product-header">
+    <h2 class="product-title">It's a Girl Baby Shower Template</h2>
+    <div class="product-price">$11.99</div>
+  </div>
+  <a class="view-details-button" href="subpages/its-a-girl.html">View Details</a>
+</div>
+    
   </section>
-
-   <script>
-
-  <script>
-  document.addEventListener("DOMContentLoaded", () => {
-    // Theme toggle logic
-    const toggleBtn = document.getElementById("dark-mode-toggle");
-    const themeLink = document.getElementById("theme-style");
-
-    const savedTheme = localStorage.getItem("theme");
-    if (savedTheme) {
-      themeLink.href =
-        savedTheme === "dark" ? "style-dark.css" : "style-light.css";
-      toggleBtn.textContent =
-        savedTheme === "dark" ? "☀️ Light Mode" : "🌙 Dark Mode";
-    }
-
-    if (toggleBtn && themeLink) {
-      toggleBtn.addEventListener("click", () => {
-        if (themeLink.href.includes("style-light.css")) {
-          themeLink.href = "style-dark.css";
-          toggleBtn.textContent = "☀️ Light Mode";
-          localStorage.setItem("theme", "dark");
-        } else {
-          themeLink.href = "style-light.css";
-          toggleBtn.textContent = "🌙 Dark Mode";
-          localStorage.setItem("theme", "light");
-        }
-      });
-    }
-  });
-</script>
 
   <footer class="site-footer fade-in">
     <img src="assets/daydream-logo.png" alt="Daydream Studios logo" class="footer-logo" />
     <p>© 2025 Daydream Studios · All rights reserved.</p>
   </footer>
 
-  </body>
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const toggleBtn = document.getElementById("dark-mode-toggle");
+      const themeLink = document.getElementById("theme-style");
+
+      const savedTheme = localStorage.getItem("theme");
+      if (savedTheme) {
+        themeLink.href = savedTheme === "dark" ? "style-dark.css" : "style-light.css";
+        toggleBtn.textContent = savedTheme === "dark" ? "☀️ Light Mode" : "🌙 Dark Mode";
+      }
+
+      if (toggleBtn && themeLink) {
+        toggleBtn.addEventListener("click", () => {
+          const isLight = themeLink.href.includes("style-light.css");
+          themeLink.href = isLight ? "style-dark.css" : "style-light.css";
+          toggleBtn.textContent = isLight ? "☀️ Light Mode" : "🌙 Dark Mode";
+          localStorage.setItem("theme", isLight ? "dark" : "light");
+        });
+      }
+    });
+  </script>
+
+</body>
 </html>
