--- a/subpages/boho-save-the-date.html
+++ b/subpages/boho-save-the-date.html
@@ -5,7 +5,7 @@
     rel="stylesheet"
   />
   
-<link id="theme-style" rel="stylesheet" href="../../style-light.css" />
+<link id="theme-style" rel="stylesheet" href="../style-light.css" />
 
 </head>
 <div class="product">
@@ -107,8 +107,8 @@ document.addEventListener("DOMContentLoaded", () => {
 
   if (savedTheme && themeLink) {
     themeLink.href = savedTheme === "dark"
-      ? "../../style-dark.css"
-      : "../../style-light.css";
+      ? "../style-dark.css"
+      : "../style-light.css";
   }
 });
 </script>
