--- a/subpages/warm-gathering.html
+++ b/subpages/warm-gathering.html
@@ -5,7 +5,7 @@
     rel="stylesheet"
   />
 
-<link id="theme-style" rel="stylesheet" href="../../style-light.css" />
+<link id="theme-style" rel="stylesheet" href="../style-light.css" />
 
 </head>
 <div class="product">
@@ -113,9 +113,9 @@
 
       if (savedTheme && themeLink) {
         if (savedTheme === "dark") {
-          themeLink.href = "../../style-dark.css";
+          themeLink.href = "../style-dark.css";
         } else {
-          themeLink.href = "../../style-light.css";
+          themeLink.href = "../style-light.css";
         }
       }
     });
