--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <div class="product-card">
   <img class="product-image" src="assets/warm_gathering.jpg" alt="Warm Gathering Family Website" />
   <div class="product-header">
-    <h2 class="product-title">Warm Gathering Family Website</h2>
+    <h2 class="product-title">Warm Gathering Family Template</h2>
     <div class="product-price">$11.99</div>
   </div>
   <a class="view-details-button" href="subpages/warm-gathering.html">View Details</a>
