--- a/subpages/boho-save-the-date.html
+++ b/subpages/boho-save-the-date.html
@@ -98,7 +98,7 @@
   </nav>
 
   <a href="../index.html" class="button">Back to Home</a>
-  <button class="buy-now">Buy Now</button>
+  <a href="https://paypal.me/DaydreamPages?country.x=US&locale.x=en_US" button class="buy-now">Buy Now</button>
 </div>
    <script>
 document.addEventListener("DOMContentLoaded", () => {
