--- a/subpages/boho-save-the-date.html
+++ b/subpages/boho-save-the-date.html
@@ -96,10 +96,11 @@
       </li>
     </ul>
   </nav>
-
+<div>
   <a href="../index.html" class="button">Back to Home</a>
-  <a href="https://paypal.me/DaydreamPages?country.x=US&locale.x=en_US" button class="buy-now">Buy Now</button>
+  <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=Custom+Invitation&amount=12.00&currency_code=USD" class="buy-button" target="_blank">Buy Now</a>
 </div>
+
    <script>
 document.addEventListener("DOMContentLoaded", () => {
   const themeLink = document.getElementById("theme-style");
