--- a/subpages/boho-save-the-date.html
+++ b/subpages/boho-save-the-date.html
@@ -96,9 +96,15 @@
       </li>
     </ul>
   </nav>
-<div>
-  <a href="../index.html" class="button">Back to Home</a>
-  <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=Custom+Invitation&amount=12.00&currency_code=USD" class="buy-button" target="_blank">Buy Now</a>
+  <div class="button-row">
+    <a href="../index.html" class="button">← Back to Home</a>
+    
+    <a 
+      href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=Boho+Sunset+Save+the+Date+Template&amount=11.99&currency_code=USD" 
+      class="buy-button" 
+      target="_blank"
+    >Buy Now</a>
+  </div>
 </div>
 
    <script>
