--- a/subpages/custom-website.html
+++ b/subpages/custom-website.html
@@ -167,8 +167,8 @@
     <a href="../index.html" class="button">← Back to Home</a>
     
     <a 
-      href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=Custom business or Event Website – Save the Date, RSVP Page – Personalized
-    Digital Invite + Free Hosting&amount=11.99&currency_code=USD" 
+      href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=FullEditableSavetheDateTemplate–BohoSunsetCanvaDownload|Wedding
+    Invitation|All-InclusiveDesign=11.99&currency_code=USD" 
       class="buy-button" 
       target="_blank"
     >Buy Now</a>
