--- a/subpages/its-a-girl.html
+++ b/subpages/its-a-girl.html
@@ -63,11 +63,6 @@
                     </li>
                   </ul>
                 </nav>
-
-                <a href="../index.html" class="button"
-                  >Back to Home</a
-                >
-                <button class="buy-now">Buy Now</button>
               </ul>
             </ul>
           </ul>
@@ -76,6 +71,17 @@
     </ul>
   </div>
 </div>
+
+  <div class="button-row">
+    <a href="../index.html" class="button">← Back to Home</a>
+    
+    <a 
+      href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=FullBabyShowerWebsiteTemplate–It'saGirlTheme|Editable RSVP Page|
+    CompleteCustomizableDesign&amount=11.99&currency_code=USD" 
+      class="buy-button" 
+      target="_blank"
+    >Buy Now</a>
+    </div>
 
   <script>
     document.addEventListener("DOMContentLoaded", () => {
