--- a/subpages/starter-website.html
+++ b/subpages/starter-website.html
@@ -30,10 +30,15 @@
     <p>Ideal for freelancers, small businesses, or personal projects.</p>
   </div>
 
-  <a href="../index.html" class="button">Back to Home</a>
-  <button class="buy-now">Buy Now</button>
-</div>
-
+ <div class="button-row">
+    <a href="../index.html" class="button">← Back to Home</a>
+    
+    <a 
+      href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=StarterWebsite—GetYourSiteUpandRunningFast&amount=11.99&currency_code=USD" 
+      class="buy-button" 
+      target="_blank"
+    >Buy Now</a>
+    </div>
   <script>
     document.addEventListener("DOMContentLoaded", () => {
       const themeLink = document.getElementById("theme-style");
