--- a/subpages/static-page.html
+++ b/subpages/static-page.html
@@ -29,10 +29,16 @@
     <p>License for proper use</p>
     <p>Great for quick, professional online presence.</p>
   </div>
-
-  <a href="../index.html" class="button">Back to Home</a>
-  <button class="buy-now">Buy Now</button>
 </div>
+ <div class="button-row">
+    <a href="../index.html" class="button">← Back to Home</a>
+    
+    <a 
+      href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=StaticPage—SimpleOne-PageWebsiteThatWorks&amount=11.99&currency_code=USD" 
+      class="buy-button" 
+      target="_blank"
+    >Buy Now</a>
+    </div>
 
 
   <script>
