--- a/subpages/starter-website.html
+++ b/subpages/starter-website.html
@@ -29,7 +29,7 @@
     <p>License to clarify usage</p>
     <p>Ideal for freelancers, small businesses, or personal projects.</p>
   </div>
-
+</div>
  <div class="button-row">
     <a href="../index.html" class="button">← Back to Home</a>
     
