--- a/subpages/summer-wedding.html
+++ b/subpages/summer-wedding.html
@@ -67,11 +67,19 @@
       </li>
     </ul>
   </nav>
-
-  <a href="../index.html" class="button">Back to Home</a>
-  <button class="buy-now">Buy Now</button>
 </div>
+   <div class="button-row">
+    <a href="../index.html" class="button">← Back to Home</a>
+    
+    <a 
+      href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=FullSummerWeddingWebsiteTemplate–SavetheDateDigitalPage|Editable
+    RSVP|CompleteCustomization&amount=11.99&currency_code=USD" 
+      class="buy-button" 
+      target="_blank"
+    >Buy Now</a>
+    </div>
 
+  
   <script>
     document.addEventListener("DOMContentLoaded", () => {
       const themeLink = document.getElementById("theme-style");
