--- a/subpages/warm-gathering.html
+++ b/subpages/warm-gathering.html
@@ -89,11 +89,6 @@
                           </li>
                         </ul>
                       </nav>
-
-                      <a href="../index.html" class="button"
-                        >Back to Home</a
-                      >
-                      <button class="buy-now">Buy Now</button>
                     </ul>
                   </ul>
                 </ul>
@@ -105,7 +100,15 @@
     </ul>
   </div>
 </div>
-
+<div class="button-row">
+    <a href="../index.html" class="button">← Back to Home</a>
+    
+    <a 
+      href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=FullFamilyWebsite–WarmGatheringTheme|EditableRSVPPage&amount=11.99&currency_code=USD" 
+      class="buy-button" 
+      target="_blank"
+    >Buy Now</a>
+    </div>
     <script>
     document.addEventListener("DOMContentLoaded", () => {
       const themeLink = document.getElementById("theme-style");
