--- a/baby-shower/gallery/its-a-boy-gallery.html
+++ b/baby-shower/gallery/its-a-boy-gallery.html
@@ -48,17 +48,20 @@
               </li>
             </ul>
           </nav>
-
-          <nav class="navigation">
-            <a href="../../index.html" class="button"
-              >← Back to Home</a
-            >
-          </nav>
         </ul>
       </ul>
     </ul>
   </div>
 </div>
+   <div class="button-row">
+    <a href="../../index.html" class="button">← Back to Home</a>
+    
+    <a 
+      href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=GalleryBabyShowerWebsiteTemplate–It'saBoyTheme|EditableRSVPPage&amount=9.99&currency_code=USD" 
+      class="buy-button" 
+      target="_blank"
+    >Buy Now</a>
+    </div>
        <script>
     document.addEventListener("DOMContentLoaded", () => {
       const themeLink = document.getElementById("theme-style");
