--- a/baby-shower/gallery/its-a-girl-gallery.html
+++ b/baby-shower/gallery/its-a-girl-gallery.html
@@ -54,14 +54,6 @@
                   </li>
                 </ul>
               </nav>
-
-              <nav class="navigation">
-                <a href="../../index.html" class="button"
-                  >← Back to Home</a
-                >
-              </nav>
-
-              <button class="buy-now">Buy Now</button>
             </ul>
           </ul>
         </ul>
@@ -69,6 +61,16 @@
     </ul>
   </div>
 </div>
+
+ <div class="button-row">
+    <a href="../../index.html" class="button">← Back to Home</a>
+    
+    <a 
+      href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=GalleryBabyShowerWebsiteTemplate–It'saGirlTheme|EditableRSVP&amount=9.99&currency_code=USD" 
+      class="buy-button" 
+      target="_blank"
+    >Buy Now</a>
+    </div>
        <script>
     document.addEventListener("DOMContentLoaded", () => {
       const themeLink = document.getElementById("theme-style");
