--- a/baby-shower/lite/its-a-boy-lite.html
+++ b/baby-shower/lite/its-a-boy-lite.html
@@ -56,7 +56,16 @@
   </div>
 </div>
 
- 
+  <div class="button-row">
+    <a href="../../index.html" class="button">← Back to Home</a>
+    
+    <a 
+      href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=LiteBabyShowerWebsiteTemplate–It'saBoyTheme|EditableRSVPPage|
+    Quick&SimpleEdit&amount=8.99&currency_code=USD" 
+      class="buy-button" 
+      target="_blank"
+    >Buy Now</a>
+    </div>
 
        <script>
     document.addEventListener("DOMContentLoaded", () => {
