--- a/invite-wedding/gallery/boho-save-the-date-gallery.html
+++ b/invite-wedding/gallery/boho-save-the-date-gallery.html
@@ -83,14 +83,16 @@
       </li>
     </ul>
   </nav>
-
-  <nav class="navigation">
+ <div class="button-row">
     <a href="../../index.html" class="button">← Back to Home</a>
-  </nav>
-
-  <button class="buy-now">Buy Now</button>
-</div>
-
+    
+    <a 
+      href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=GallerySavetheDateTemplate–BohoSunsetCanvaDownload|Wedding
+    Invitation|MultiplePageOptions&amount=8.99&currency_code=USD" 
+      class="buy-button" 
+      target="_blank"
+    >Buy Now</a>
+    </div>
 
   <script>
     document.addEventListener("DOMContentLoaded", () => {
