--- a/invite-wedding/gallery/summer-wedding-gallery.html
+++ b/invite-wedding/gallery/summer-wedding-gallery.html
@@ -47,14 +47,17 @@
       </li>
       <li><a href="../../subpages/summer-wedding.html" class="button">Full</a></li>
     </ul>
-  </nav>
-
-  <nav class="navigation">
+  <div class="button-row">
     <a href="../../index.html" class="button">← Back to Home</a>
-  </nav>
+    
+    <a 
+      href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=GallerySummerWeddingWebsiteTemplate–SavetheDateDigitalPage|
+    EditableRSVP|MultipleLayouts&amount=8.99&currency_code=USD" 
+      class="buy-button" 
+      target="_blank"
+    >Buy Now</a>
+    </div>
 
-  <button class="buy-now">Buy Now</button>
-</div>
 
   <script>
     document.addEventListener("DOMContentLoaded", () => {
