--- a/invite-wedding/gallery/warm-gathering-gallery.html
+++ b/invite-wedding/gallery/warm-gathering-gallery.html
@@ -84,14 +84,6 @@
                           </li>
                         </ul>
                       </nav>
-
-                      <nav class="navigation">
-                        <a href="../../index.html" class="button"
-                          >← Back to Home</a
-                        >
-                      </nav>
-
-                      <button class="buy-now">Buy Now</button>
                     </ul>
                   </ul>
                 </ul>
@@ -103,6 +95,17 @@
     </ul>
   </div>
 </div>
+
+
+ <div class="button-row">
+    <a href="../../index.html" class="button">← Back to Home</a>
+    
+    <a 
+      href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=GalleryEventSite–WarmGathering|FamilyRSVPWebsite&amount=8.99&currency_code=USD" 
+      class="buy-button" 
+      target="_blank"
+    >Buy Now</a>
+    </div>
 
   <script>
     document.addEventListener("DOMContentLoaded", () => {
