--- a/invite-wedding/lite/boho-save-the-date-lite.html
+++ b/invite-wedding/lite/boho-save-the-date-lite.html
@@ -77,13 +77,17 @@
       </li>
     </ul>
   </nav>
-
-  <nav class="navigation">
-    <a href="../../index.html" class="button">← Back to Home</a>
-  </nav>
-
-  <button class="buy-now">Buy Now</button>
 </div>
+    <div class="button-row">
+    <a href="../../index.html" class="button">← Back to Home</a>
+    
+    <a 
+      href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name= LiteEditableSavetheDateTemplate–BohoSunsetCanvaDownload|Wedding
+    Invitation|Quick&EasyEdit&amount=8.99&currency_code=USD" 
+      class="buy-button" 
+      target="_blank"
+    >Buy Now</a>
+    </div>
   <script>
     document.addEventListener("DOMContentLoaded", () => {
       const themeLink = document.getElementById("theme-style");
