--- a/invite-wedding/lite/summer-wedding-lite.html
+++ b/invite-wedding/lite/summer-wedding-lite.html
@@ -53,13 +53,18 @@
       <li><a href="../../subpages/summer-wedding.html" class="button">Full</a></li>
     </ul>
   </nav>
-
-  <nav class="navigation">
-    <a href="../../index.html" class="button">← Back to Home</a>
-  </nav>
-
-  <button class="buy-now">Buy Now</button>
 </div>
+
+  <div class="button-row">
+    <a href="../../index.html" class="button">← Back to Home</a>
+    
+    <a 
+      href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=LiteSummerWeddingWebsiteTemplate–SavetheDateDigitalPage|Editable
+    RSVP|Easy&FastEdit&amount=8.99&currency_code=USD" 
+      class="buy-button" 
+      target="_blank"
+    >Buy Now</a>
+    </div>
   <script>
     document.addEventListener("DOMContentLoaded", () => {
       const themeLink = document.getElementById("theme-style");
