--- a/invite-wedding/lite/warm-gathering-lite.html
+++ b/invite-wedding/lite/warm-gathering-lite.html
@@ -95,14 +95,6 @@
                           </li>
                         </ul>
                       </nav>
-
-                      <nav class="navigation">
-                        <a href="../../index.html" class="button"
-                          >← Back to Home</a
-                        >
-                      </nav>
-
-                      <button class="buy-now">Buy Now</button>
                     </ul>
                   </ul>
                 </ul>
@@ -114,6 +106,15 @@
     </ul>
   </div>
 </div>
+   <div class="button-row">
+    <a href="../../index.html" class="button">← Back to Home</a>
+    
+    <a 
+      href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=LiteRSVPWebsite–WarmGathering|FamilyEventPage&amount=8.99&currency_code=USD" 
+      class="buy-button" 
+      target="_blank"
+    >Buy Now</a>
+    </div>
         <script>
     document.addEventListener("DOMContentLoaded", () => {
       const themeLink = document.getElementById("theme-style");
