--- a/subpages/boho-save-the-date.html
+++ b/subpages/boho-save-the-date.html
@@ -100,7 +100,8 @@
     <a href="../index.html" class="button">← Back to Home</a>
     
     <a 
-      href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=Boho+Sunset+Save+the+Date+Template&amount=11.99&currency_code=USD" 
+      href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=FullEditableSavetheDateTemplate–BohoSunsetCanvaDownload|Wedding
+    Invitation|All-InclusiveDesign&amount=11.99&currency_code=USD" 
       class="buy-button" 
       target="_blank"
     >Buy Now</a>
