--- a/subpages/boho-save-the-date.html
+++ b/subpages/boho-save-the-date.html
@@ -102,7 +102,7 @@
     <a 
       href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=FullEditableSavetheDateTemplate–BohoSunsetCanvaDownload|Wedding
     Invitation|All-InclusiveDesign&amount=11.99&currency_code=USD" 
-      class="buy-button" 
+      class="buy-now"
       target="_blank"
     >Buy Now</a>
   </div>
