--- a/subpages/custom-website.html
+++ b/subpages/custom-website.html
@@ -164,12 +164,12 @@
     </ul>
   </nav>
   <div class="button-row">
-    <a href="../index.html" class="button">← Back to Home</a>
+    <a href="../index.html" class="back-home">← Back to Home</a>
     
     <a 
-      href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=FullEditableSavetheDateTemplate–BohoSunsetCanvaDownload|Wedding
-    Invitation|All-InclusiveDesign=11.99&currency_code=USD" 
-      class="buy-button" 
+      href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=CustombusinessorEventWebsite–SavetheDate,RSVPPage–Personalized
+    DigitalInvite+FreeHosting&amount=11.99&currency_code=USD" 
+      class="buy-now" 
       target="_blank"
     >Buy Now</a>
   </div>
