--- a/subpages/boho-save-the-date.html
+++ b/subpages/boho-save-the-date.html
@@ -97,7 +97,7 @@
     </ul>
   </nav>
   <div class="button-row">
-    <a href="../index.html" class="button">← Back to Home</a>
+    <a href="../index.html" class="back-home">← Back to Home</a>
     
     <a 
       href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=FullEditableSavetheDateTemplate–BohoSunsetCanvaDownload|Wedding
