--- a/subpages/its-a-boy.html
+++ b/subpages/its-a-boy.html
@@ -67,12 +67,12 @@
   </div>
 </div>
  <div class="button-row">
-    <a href="../index.html" class="button">← Back to Home</a>
+    <a href="../index.html" class="back-home">← Back to Home</a>
     
     <a 
       href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=FullBabyShowerWebsiteTemplate–It'saBoyTheme|EditableRSVPPage|
     CompleteCustomizableDesign&amount=11.99&currency_code=USD" 
-      class="buy-button" 
+      class="buy-now" 
       target="_blank"
     >Buy Now</a>
     </div>
