--- a/subpages/its-a-girl.html
+++ b/subpages/its-a-girl.html
@@ -73,12 +73,12 @@
 </div>
 
   <div class="button-row">
-    <a href="../index.html" class="button">← Back to Home</a>
+    <a href="../index.html" class="back-home">← Back to Home</a>
     
     <a 
       href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=FullBabyShowerWebsiteTemplate–It'saGirlTheme|Editable RSVP Page|
     CompleteCustomizableDesign&amount=11.99&currency_code=USD" 
-      class="buy-button" 
+      class="buy-now" 
       target="_blank"
     >Buy Now</a>
     </div>
