--- a/invite-wedding/gallery/boho-save-the-date-gallery.html
+++ b/invite-wedding/gallery/boho-save-the-date-gallery.html
@@ -84,12 +84,12 @@
     </ul>
   </nav>
  <div class="button-row">
-    <a href="../../index.html" class="button">← Back to Home</a>
+    <a href="../../index.html" class="back-home">← Back to Home</a>
     
     <a 
       href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=GallerySavetheDateTemplate–BohoSunsetCanvaDownload|Wedding
     Invitation|MultiplePageOptions&amount=9.99&currency_code=USD" 
-      class="buy-button" 
+      class="buy-now" 
       target="_blank"
     >Buy Now</a>
     </div>
