--- a/invite-wedding/gallery/summer-wedding-gallery.html
+++ b/invite-wedding/gallery/summer-wedding-gallery.html
@@ -48,12 +48,12 @@
       <li><a href="../../subpages/summer-wedding.html" class="button">Full</a></li>
     </ul>
   <div class="button-row">
-    <a href="../../index.html" class="button">← Back to Home</a>
+    <a href="../../index.html" class="back-home">← Back to Home</a>
     
     <a 
       href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=GallerySummerWeddingWebsiteTemplate–SavetheDateDigitalPage|
     EditableRSVP|MultipleLayouts&amount=9.99&currency_code=USD" 
-      class="buy-button" 
+      class="buy-now" 
       target="_blank"
     >Buy Now</a>
     </div>
