--- a/invite-wedding/lite/boho-save-the-date-lite.html
+++ b/invite-wedding/lite/boho-save-the-date-lite.html
@@ -79,12 +79,12 @@
   </nav>
 </div>
     <div class="button-row">
-    <a href="../../index.html" class="button">← Back to Home</a>
+    <a href="../../index.html" class="back-home">← Back to Home</a>
     
     <a 
       href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name= LiteEditableSavetheDateTemplate–BohoSunsetCanvaDownload|Wedding
     Invitation|Quick&EasyEdit&amount=8.99&currency_code=USD" 
-      class="buy-button" 
+      class="buy-now" 
       target="_blank"
     >Buy Now</a>
     </div>
