--- a/invite-wedding/lite/summer-wedding-lite.html
+++ b/invite-wedding/lite/summer-wedding-lite.html
@@ -56,12 +56,12 @@
 </div>
 
   <div class="button-row">
-    <a href="../../index.html" class="button">← Back to Home</a>
+    <a href="../../index.html" class="back-home">← Back to Home</a>
     
     <a 
       href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=LiteSummerWeddingWebsiteTemplate–SavetheDateDigitalPage|Editable
     RSVP|Easy&FastEdit&amount=8.99&currency_code=USD" 
-      class="buy-button" 
+      class="buy-now" 
       target="_blank"
     >Buy Now</a>
     </div>
