--- a/invite-wedding/lite/warm-gathering-lite.html
+++ b/invite-wedding/lite/warm-gathering-lite.html
@@ -107,11 +107,11 @@
   </div>
 </div>
    <div class="button-row">
-    <a href="../../index.html" class="button">← Back to Home</a>
+    <a href="../../index.html" class="back-home">← Back to Home</a>
     
     <a 
       href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=LiteRSVPWebsite–WarmGathering|FamilyEventPage&amount=8.99&currency_code=USD" 
-      class="buy-button" 
+      class="buy-now" 
       target="_blank"
     >Buy Now</a>
     </div>
