--- a/baby-shower/gallery/its-a-boy-gallery.html
+++ b/baby-shower/gallery/its-a-boy-gallery.html
@@ -54,11 +54,11 @@
   </div>
 </div>
    <div class="button-row">
-    <a href="../../index.html" class="button">← Back to Home</a>
+    <a href="../../index.html" class="back-home">← Back to Home</a>
     
     <a 
       href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=youremail%40gmail.com&item_name=GalleryBabyShowerWebsiteTemplate–It'saBoyTheme|EditableRSVPPage&amount=9.99&currency_code=USD" 
-      class="buy-button" 
+      class="buy-now" 
       target="_blank"
     >Buy Now</a>
     </div>
